<resources>
    <string name="app_name">Calibuso_exer5_LightsOutv2</string>
    <string name="title">Lights Out!</string>
    <string name="taps_text">0</string>
    <string name="name_start"></string>
    <string name="taps_label_text">taps</string>
    <string name="enter_your_name_here_text">Enter your name here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="congratulations">Congratulations</string>
    <string name="you_finished_the_game_in">You finished the game in</string>
</resources>
