<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_horizontal">

    <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="92dp"
      android:fontFamily="@font/montserrat_bold"
      android:gravity="center_horizontal"
      android:text="@string/congratulations"
      android:textColor="@color/blue"
      android:textSize="32sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/montserrat_medium"
      android:gravity="center_horizontal"
      android:text="@string/you_finished_the_game_in"
      android:textAlignment="center"
      android:textColor="@color/blue"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="170dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="170dp"
      android:fontFamily="@font/montserrat_bold"
      android:gravity="clip_horizontal"
      android:text="00"
      android:textColor="@color/blue"
      android:textSize="52sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="178dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="179dp"
      android:fontFamily="@font/montserrat_bold"
      android:gravity="center_horizontal"
      android:text="@string/taps_label_text"
      android:textColor="@color/blue"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
      android:id="@+id/retry_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="169dp"
      android:layout_marginTop="372dp"
      android:layout_marginEnd="169dp"
      android:layout_marginBottom="285dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@drawable/retry" />


  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>