<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/root_game_board_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title"
            android:textColor="@color/blue"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_text">>


            <LinearLayout
                android:id="@+id/row_1_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/untapped1_1_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-0-0"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped1_2_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-0-1"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped1_3_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-0-2"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped1_4_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-0-3"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped1_5_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tag="untapped-0-4"
                    app:srcCompat="@drawable/untapped" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/untapped2_1_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-1-0"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped2_2_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-1-1"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped2_3_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-1-2"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped2_4_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-1-3"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped2_5_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tag="untapped-1-4"
                    app:srcCompat="@drawable/untapped" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_3_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/untapped3_1_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-2-0"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped3_2_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-2-1"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped3_3_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-2-2"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped3_4_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-2-3"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped3_5_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tag="untapped-2-4"
                    app:srcCompat="@drawable/untapped" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_4_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/untapped4_1_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-3-0"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped4_2_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-3-1"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped4_3_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-3-2"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped4_4_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-3-3"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped4_5_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tag="untapped-3-4"
                    app:srcCompat="@drawable/untapped" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/row_5_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/untapped5_1_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-4-0"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped5_2_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-4-1"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped5_3_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-4-2"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped5_4_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="11dp"
                    android:tag="untapped-4-3"
                    app:srcCompat="@drawable/untapped" />

                <ImageView
                    android:id="@+id/untapped5_5_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tag="untapped-4-4"
                    app:srcCompat="@drawable/untapped" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_layout">

            <TextView
                android:id="@+id/taps_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/taps_text"
                android:textColor="@color/blue"
                android:textSize="52sp" />

            <TextView
                android:id="@+id/taps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/taps_label_text"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:tag="retry-0-0"
                app:srcCompat="@drawable/retry" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>